<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailShowActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">



    </com.google.android.material.appbar.AppBarLayout>

    <include android:id="@+id/detail_content"
        layout="@layout/content_detail_show" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar_layout"
        app:srcCompat="@drawable/ic_favorite_false"
        app:layout_anchorGravity="end|bottom|right"
        android:layout_marginEnd="35dp"
        app:backgroundTint="@color/colorAccent"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>